Fix the layout issue of the input element

--- a/src/index.css
+++ b/src/index.css
@@ -96,3 +96,9 @@ img {
     --radius: 0.5rem;
   }
 }
+
+@media (max-width: 765px) {
+  .border-solid {
+    --tw-border-style: solid;
+  }
+}
